--- a/branches/RB-0.50/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_AP.cfg
+++ b/branches/RB-0.50/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_AP.cfg
@@ -17,7 +17,7 @@ CLF,D:\BANKR_CC\logs\biz\brccazbk\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\brcc\
 CLF,D:\BANKR_CC\logs\biz\brccazbk\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\brcc\azbk
 NON,D:\BANKR_CC\logs\ui\brccazbk,access.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
 NON,D:\BANKR_CC\logs\ui\brccazbk,error.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
-NON,D:\BANKR_CC\logs\ui\brccazbk,heap.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
+NON,D:\BANKR_CC\logs\ui\brccazbk,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
 NON,D:\BANKR_CC\logs\ui\brccazbk,debug.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
 NON,D:\BANKR_CC\logs\ui\brccazbk,dump.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk
 # 研修インスタンス
@@ -25,7 +25,7 @@ CLF,D:\BANKR_CC\logs\biz\brcctrng\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\brcc\
 CLF,D:\BANKR_CC\logs\biz\brcctrng\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\brcc\trng
 NON,D:\BANKR_CC\logs\ui\brcctrng,access.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
 NON,D:\BANKR_CC\logs\ui\brcctrng,error.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
-NON,D:\BANKR_CC\logs\ui\brcctrng,heap.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
+NON,D:\BANKR_CC\logs\ui\brcctrng,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
 NON,D:\BANKR_CC\logs\ui\brcctrng,debug.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
 NON,D:\BANKR_CC\logs\ui\brcctrng,dump.log,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng
 #-----------------------------------------------------------------------------------------------------------------------
