--- a/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_AP.cfg
@@ -29,12 +29,12 @@ F,D:\BANKR_CC\logs\ui\brcctrng,debug.log.????-??-??,30
 F,D:\BANKR_CC\logs\ui\brcctrng,dump.log.????-??-??,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,access.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,error.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,heap.log.????????,30
+F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,heap.log.*,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,debug.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,dump.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,access.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,error.log.????????,30
-F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,heap.log.????????,30
+F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,heap.log.*,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,debug.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,dump.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\was\azbk,trace.log.????????,30
@@ -65,12 +65,12 @@ F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\azbk,access.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\trng,access.log.????????,3650
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,access.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,error.log.????????,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,heap.log.????????,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,heap.log.*,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,debug.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk,dump.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,access.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,error.log.????????,90
-F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,heap.log.????????,90
+F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,heap.log.*,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,debug.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng,dump.log.????????,90
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\azbk,error.log.????????,90
