--- a/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_AP.cfg
@@ -10,38 +10,68 @@
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
 C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
-# BANKR CC 本番インスタンス
-C,F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBTraceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk
-C,F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBPerformanceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk
-# BANKR CC 研修インスタンス
-C,F,D:\unyolog\@@SVRNL@@\audit\brcc\trng,eMBTraceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\trng
-C,F,D:\unyolog\@@SVRNL@@\audit\brcc\trng,eMBPerformanceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\trng
-# IHS 本番インスタンス
-C,F,D:\logfile\IHS\brccazbk,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\azbk
-# IHS 研修インスタンス
-C,F,D:\logfile\IHS\brcctrng,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\trng
-# WAS 本番インスタンス
-C,F,D:\unyolog\@@SVRNL@@\audit\was\azbk,trace.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
-C,F,D:\unyolog\@@SVRNL@@\audit\was\azbk,activity.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
-C,F,D:\logfile\WAS\brccazbk,SystemOut_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
-C,F,D:\logfile\WAS\brccazbk,SystemErr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
-# WAS 研修インスタンス
-C,F,D:\unyolog\@@SVRNL@@\audit\was\trng,trace_tr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
-C,F,D:\unyolog\@@SVRNL@@\audit\was\trng,activity_tr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
-C,F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
-C,F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
+# BANKR CC 本番インスタンス 0.5次
+#C,F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBTraceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk
+#C,F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBPerformanceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk
+# BANKR CC 本番インスタンス 1.0次
+C,F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrazb,eMBTraceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrazb
+C,F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrazb,eMBPerformanceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrazb
+# BANKR CC 研修インスタンス 0.5次
+#C,F,D:\unyolog\@@SVRNL@@\audit\brcc\trng,eMBTraceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\trng
+#C,F,D:\unyolog\@@SVRNL@@\audit\brcc\trng,eMBPerformanceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\trng
+# BANKR CC 研修インスタンス 1.0次
+C,F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn,eMBTraceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrtrn
+C,F,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn,eMBPerformanceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\bankr\bankrtrn
+# IHS 本番インスタンス 0.5次
+#C,F,D:\logfile\IHS\brccazbk,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\azbk
+# IHS 本番インスタンス 1.0次
+C,F,D:\logfile\IHS\bankrazb,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\bankrazb
+# IHS 研修インスタンス 0.5次
+#C,F,D:\logfile\IHS\brcctrng,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\trng
+# IHS 研修インスタンス 1.0次
+C,F,D:\logfile\IHS\bankrtrn,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\ihs\bankrtrn
+# WAS 本番インスタンス 0.5次
+#C,F,D:\unyolog\@@SVRNL@@\audit\was\azbk,trace.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
+#C,F,D:\unyolog\@@SVRNL@@\audit\was\azbk,activity.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
+#C,F,D:\logfile\WAS\brccazbk,SystemOut_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
+#C,F,D:\logfile\WAS\brccazbk,SystemErr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\azbk
+# WAS 本番インスタンス 1.0次
+C,F,D:\unyolog\@@SVRNL@@\audit\was\bankrazb,trace.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb
+C,F,D:\unyolog\@@SVRNL@@\audit\was\bankrazb,activity.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb
+C,F,D:\logfile\WAS\bankrazb,SystemOut_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb
+C,F,D:\logfile\WAS\bankrazb,SystemErr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrazb
+# WAS 研修インスタンス 0.5次
+#C,F,D:\unyolog\@@SVRNL@@\audit\was\trng,trace_tr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
+#C,F,D:\unyolog\@@SVRNL@@\audit\was\trng,activity_tr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
+#C,F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
+#C,F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\trng
+# WAS 研修インスタンス 1.0次
+C,F,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn,trace_tr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrtrn
+C,F,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn,activity_tr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrtrn
+C,F,D:\logfile\WAS\bankrtrn,SystemOut_tr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrtrn
+C,F,D:\logfile\WAS\bankrtrn,SystemErr_tr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\was\bankrtrn
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
 M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
-# IHS 本番インスタンス
-M,F,D:\logfile\IHS\brccazbk,access.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\ihs\azbk
-# IHS 研修インスタンス
-M,F,D:\logfile\IHS\brcctrng,access.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\ihs\trng
-# WAS 本番インスタンス
-M,F,D:\logfile\WAS\brccazbk,SystemOut_*.log,D:\unyolog\@@SVRNL@@\audit\was\azbk
-M,F,D:\logfile\WAS\brccazbk,SystemErr_*.log,D:\unyolog\@@SVRNL@@\audit\was\azbk
-# WAS 研修インスタンス
-M,F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,D:\unyolog\@@SVRNL@@\audit\was\trng
-M,F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,D:\unyolog\@@SVRNL@@\audit\was\trng
+# IHS 本番インスタンス 0.5次
+#M,F,D:\logfile\IHS\brccazbk,access.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\ihs\azbk
+# IHS 本番インスタンス 1.0次
+M,F,D:\logfile\IHS\bankrazb,access.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\ihs\bankrazb
+# IHS 研修インスタンス 0.5次
+#M,F,D:\logfile\IHS\brcctrng,access.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\ihs\trng
+# IHS 研修インスタンス 1.0次
+M,F,D:\logfile\IHS\bankrtrn,access.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\ihs\bankrtrn
+# WAS 本番インスタンス 0.5次
+#M,F,D:\logfile\WAS\brccazbk,SystemOut_*.log,D:\unyolog\@@SVRNL@@\audit\was\azbk
+#M,F,D:\logfile\WAS\brccazbk,SystemErr_*.log,D:\unyolog\@@SVRNL@@\audit\was\azbk
+# WAS 本番インスタンス 1.0次
+M,F,D:\logfile\WAS\bankrazb,SystemOut_*.log,D:\unyolog\@@SVRNL@@\audit\was\bankrazb
+M,F,D:\logfile\WAS\bankrazb,SystemErr_*.log,D:\unyolog\@@SVRNL@@\audit\was\bankrazb
+# WAS 研修インスタンス 0.5次
+#M,F,D:\logfile\WAS\brcctrng,SystemOut_tr_*.log,D:\unyolog\@@SVRNL@@\audit\was\trng
+#M,F,D:\logfile\WAS\brcctrng,SystemErr_tr_*.log,D:\unyolog\@@SVRNL@@\audit\was\trng
+# WAS 研修インスタンス 1.0次
+M,F,D:\logfile\WAS\bankrtrn,SystemOut_tr_*.log,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn
+M,F,D:\logfile\WAS\bankrtrn,SystemErr_tr_*.log,D:\unyolog\@@SVRNL@@\audit\was\bankrtrn
