--- a/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_AP.cfg
@@ -13,22 +13,38 @@ C,F,D:\logfile\event\,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log
 C,F,D:\logfile\event\,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
 # UNYO Log
 C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo
-# BANKR CC 本番インスタンス
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
-# BANKR CC 研修インスタンス
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
-C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
-# IHS 本番インスタンス
-C,F,D:\logfile\IHS\brccazbk,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\azbk
-# IHS 研修インスタンス
-C,F,D:\logfile\IHS\brcctrng,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\trng
+# BANKR CC 本番インスタンス 0.5次
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
+# BANKR CC 本番インスタンス 1.0次
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
+# BANKR CC 研修インスタンス 0.5次
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
+#C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
+# BANKR CC 研修インスタンス 1.0次
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
+C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
+# IHS 本番インスタンス 0.5次
+#C,F,D:\logfile\IHS\brccazbk,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\azbk
+# IHS 本番インスタンス 1.0次
+C,F,D:\logfile\IHS\bankrazb,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\bankrazb
+# IHS 研修インスタンス 0.5次
+#C,F,D:\logfile\IHS\brcctrng,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\trng
+# IHS 研修インスタンス 1.0次
+C,F,D:\logfile\IHS\bankrtrn,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\ihs\bankrtrn
 # WAS 本番インスタンス
 #C,F,D:\unyolog\@@SVRNL@@\log\was\azbk,native_stdout.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\was\azbk
 #C,F,D:\unyolog\@@SVRNL@@\log\was\azbk,native_stderr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\was\azbk
@@ -43,7 +59,11 @@ C,F,D:\logfile\IHS\brcctrng,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\l
 # Event Log
 M,F,D:\logfile\event\,event_sys.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
 M,F,D:\logfile\event\,event_apl.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
-# IHS 本番インスタンス
-M,F,D:\logfile\IHS\brccazbk,error.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\ihs\azbk
-# IHS 研修インスタンス
-M,F,D:\logfile\IHS\brcctrng,error.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\ihs\trng
+# IHS 本番インスタンス 0.5次
+#M,F,D:\logfile\IHS\brccazbk,error.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\ihs\azbk
+# IHS 本番インスタンス 1.0次
+M,F,D:\logfile\IHS\bankrazb,error.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\ihs\bankrazb
+# IHS 研修インスタンス 0.5次
+#M,F,D:\logfile\IHS\brcctrng,error.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\ihs\trng
+# IHS 研修インスタンス 1.0次
+M,F,D:\logfile\IHS\bankrtrn,error.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\ihs\bankrtrn
