--- a/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -13,12 +13,18 @@ C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
-# Oracle
+# Oracle 0.5次
+#C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener
+#C,F,E:\CLlog\azbk\BANKR\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog
+#C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
+#C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
+#C,F,E:\CLlog\azbk\BANKR\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors
+# Oracle 1.0次
 C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener
-C,F,E:\CLlog\azbk\BANKR\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog
-C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
-C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
-C,F,E:\CLlog\azbk\BANKR\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors
+C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog
+C,F,F:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
+C,F,F:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
+C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
