--- a/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
@@ -15,16 +15,27 @@ F,D:\unyolog\@@SVRNL@@\audit\event,event_sec.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_sys.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 #-----------------------------------------------------------------------------------------------------------------------
-# äƒç∏ÉçÉO
+# äƒç∏ÉçÉO 0.5éü
+#-----------------------------------------------------------------------------------------------------------------------
+#F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.????????,30
+#F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
+#D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
+#F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
+#F,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
+#F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,3
+#F,E:\CLlog\azbk\BANKR\audit\opelog,ope_history.dump.*,30
+#F,E:\CLlog\azbk\BANKR\error,err.*,30
+#-----------------------------------------------------------------------------------------------------------------------
+# äƒç∏ÉçÉO 1.0éü
 #-----------------------------------------------------------------------------------------------------------------------
 F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
 D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
-F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
-F,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
-F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,7
-F,E:\CLlog\azbk\BANKR\audit\opelog,ope_history.dump.*,30
-F,E:\CLlog\azbk\BANKR\error,err.*,30
+F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
+F,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
+F,F:\DBFiles\bankrazb\adump,bankrazb_*.xml,3
+F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
+F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
 #-----------------------------------------------------------------------------------------------------------------------
 # NASï€ä«
 #-----------------------------------------------------------------------------------------------------------------------
@@ -39,6 +50,7 @@ F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener,fslfcctbsdbpw01.log.?????
 D,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle,????????,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors,err.*,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog,ope_history.dump.????????,3650
-F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
+#F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
+F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\hulft,*.log.????????,90
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\BE,*.xml.????????,90
