--- a/trunk/unyo/shell/def/ForMaster/RENAME_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/RENAME_LOG_DEF_DB.cfg
@@ -1,5 +1,6 @@
 #-----------------------------------------------------------------------------------------------------------------------
 # ログファイルリネーム定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+#                          ( Version 1.1 : 2015/01/08 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # RENAME_LOG_DEF.cfg (DBサーバ用)
 # クリア区分,リネーム元ディレクトリ,リネーム対象ファイル,リネーム先ディレクトリ
@@ -14,7 +15,5 @@ CLF,D:\logfile\unyo\azbk\,error.log,D:\unyolog\@@SVRNL@@\log\unyo
 #-----------------------------------------------------------------------------------------------------------------------
 # Oracle 本番インスタンス
 CLF,E:\CLlog\oracle\Fslfcctbsdbpw01\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,fslfcctbsdbpw01.log,D:\unyolog\@@SVRNL@@\audit\listener
-#CLF,E:\CLlog\hulft,*.log,D:\unyolog\@@SVRNL@@\log\hulft
-#CLF,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\listener
-#CLF,E:\CLlog\azbk\BANKR\error,err.@@D0005@@,D:\unyolog\@@SVRNL@@\audit\errors
-CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
+#CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
+CLF,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
