--- a/trunk/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_DB.cfg
@@ -1,7 +1,8 @@
 #-----------------------------------------------------------------------------------------------------------------------
 # ログファイルリネーム定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+#                          ( Version 1.1 : 2015/01/08 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
-# RENAME_LOG_DEF.cfg (DBサーバ用)
+# RENAME_LOG_DEF.cfg (DBサーバ用) 開発用
 # クリア区分,リネーム元ディレクトリ,リネーム対象ファイル,リネーム先ディレクトリ
 #-----------------------------------------------------------------------------------------------------------------------
 # クリア区分説明 ( CLN：リネーム処理後＆クリア , CLF:リネーム処理＆後強制クリア NON：リネーム処理のみ )
@@ -12,9 +13,7 @@ CLF,D:\logfile\unyo\azbk\,error.log,D:\unyolog\@@SVRNL@@\log\unyo
 #-----------------------------------------------------------------------------------------------------------------------
 # DBサービスノード用定義
 #-----------------------------------------------------------------------------------------------------------------------
-# Oracle 本番インスタンス
-CLF,E:\CLlog\oracle\Fslfcctbsdbpw01\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,fslfcctbsdbpw01.log,D:\unyolog\@@SVRNL@@\audit\listener
-#CLF,E:\CLlog\hulft,*.log,D:\unyolog\@@SVRNL@@\log\hulft
-#CLF,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\listener
-#CLF,E:\CLlog\azbk\BANKR\error,err.@@D0005@@,D:\unyolog\@@SVRNL@@\audit\errors
-CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
+# Oracle 開発インスタンス
+CLF,E:\CLlog\oracle\bankrazb\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,bankrazb.log,D:\unyolog\@@SVRNL@@\audit\listener
+#CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
+CLF,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
