--- a/trunk/unyo/shell/def/ForMaster/HULFT_SEND_FILE_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/HULFT_SEND_FILE_DEF_DB.cfg
@@ -1,11 +1,22 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 配信ファイルメンテナンス定義 ( Version 1.0 : 2014/07/20 : Update ISID R.YAMANO )
+# 配信ファイルメンテナンス定義 ( Version 1.0 : 2015/07/03 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
-# HULFT_SEND_FILE_DEF_DB.cfg  (DBサーバ用)
+# HULFT_SEND_FILE_DEF_DB.cfg  (DBサーバ用) 1.0次対応版
+#-----------------------------------------------------------------------------------------------------------------------
+# 0.5次定義
 #-----------------------------------------------------------------------------------------------------------------------
 # テレバン契約者情報ファイル
-DWEC003,S_CZU.dat
+#DWEC003,S_CZU.dat
 # コンタクト履歴ファイル
-DWEC002,S_LCU.dat
+#DWEC002,S_LCU.dat
 # オペレータ情報連携ファイル(IB連携)
-DWEC004,S_IB1.dat
+#DWEC004,S_IB1.dat
+#-----------------------------------------------------------------------------------------------------------------------
+# 1.0次定義
+#-----------------------------------------------------------------------------------------------------------------------
+# コンタクト履歴ファイル
+D9HD001,S_LCU.dat
+# テレバン契約属性
+D9HD002,S_TB1.dat
+# テレバン契約口座情報
+D9HD003,S_TB2.dat
