【1.0】ＩＴb_097 ログメンテナンス定義ファイル変更（ドライブ）
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@128 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 監査ログバックアップ定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 監査ログバックアップ定義 ( Version 1.0 : 2015/08/14 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_AUDIT_DEF.cfg (監査ログバックアップ) (DBサーバ用) 開発用
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -22,8 +22,8 @@ C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\
 # Oracle 1.0次 開発
 C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbdw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
 C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog
-C,F,F:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle\@@D0001@@
-C,F,F:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
+C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle\@@D0001@@
+C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
 C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
