--- a/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 不要ファイル削除定義 ( Version 1.0 : 2015/08/14 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (DBサーバ用)　開発用
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -33,7 +33,7 @@ F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
 D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
 F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
 F,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
-F,F:\DBFiles\bankrazb\adump,bankrazb_*.xml,7
+F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,7
 F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
 F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
 #-----------------------------------------------------------------------------------------------------------------------
