--- a/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -20,7 +20,7 @@ C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\
 #C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
 #C,F,E:\CLlog\azbk\BANKR\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors
 # Oracle 1.0ŽŸ ŠJ”­
-C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbdw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
+C,F,D:\unyolog\@@SVRNL@@\audit\listener,bankrazb_lsnr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
 C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog
 C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle\@@D0001@@
 C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
