【1.0次】クラスタ対応 定義ファイル修正
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@135 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForDevelopers/BACKUP_OTHER_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/BACKUP_OTHER_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 各種ログバックアップ定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 各種ログバックアップ定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_OTHER_LOG_DEF.cfg (監査ログを除く各種ログ) (DBサーバ用) 開発用
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -16,8 +16,8 @@ C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVR
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
-#C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle
-C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle
+C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle
+#C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
