--- a/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.0 : 2015/08/14 : Update ISID R.YAMANO )
+# 不要ファイル削除定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (DBサーバ用)　開発用
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -15,7 +15,7 @@ F,D:\unyolog\@@SVRNL@@\audit\event,event_sec.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_sys.log.????????,30
 F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 #-----------------------------------------------------------------------------------------------------------------------
-# 監査ログ 0.5次
+# 監査ログ 0.5次 開発用
 #-----------------------------------------------------------------------------------------------------------------------
 #F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbdw01.log.????????,30
 #F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
@@ -28,12 +28,23 @@ F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 #-----------------------------------------------------------------------------------------------------------------------
 # 監査ログ 1.0次 開発用
 #-----------------------------------------------------------------------------------------------------------------------
-F,D:\unyolog\@@SVRNL@@\audit\listener,bankrazb_lsnr.log.????????,30
+#F,D:\unyolog\@@SVRNL@@\audit\listener,bankrazb_lsnr.log.????????,30
+#F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
+#D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
+#F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
+#F,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
+#F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,7
+#F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
+#F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
+#-----------------------------------------------------------------------------------------------------------------------
+# 監査ログ 1.0次 クラスタ対応 開発用
+#-----------------------------------------------------------------------------------------------------------------------
+F,D:\unyolog\@@SVRNL@@\audit\listener,brccazbk_lsnr.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
 D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
-F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
-F,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
-F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,7
+F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
+F,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
+F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,7
 F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
 F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
 #-----------------------------------------------------------------------------------------------------------------------
@@ -46,11 +57,12 @@ F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_apl.log.????????,90
 # 運用ログ
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo,error.log.????????,90
 # サービスノード設定 開発用
-F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,bankrazb_lsnr.log.????????,3650
+F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,brccazbk_lsnr.log.????????,3650
+#F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,bankrazb_lsnr.log.????????,3650
 D,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle,????????,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors,err.*,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog,ope_history.dump.????????,3650
-#F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
-F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
+F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
+#F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\hulft,*.log.????????,90
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\BE,*.xml.????????,90
