--- a/trunk/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/RENAME_LOG_DEF_DB.cfg
@@ -1,6 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# ログファイルリネーム定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
-#                          ( Version 1.1 : 2015/01/08 : Update ISID R.YAMANO )
+# ログファイルリネーム定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # RENAME_LOG_DEF.cfg (DBサーバ用) 開発用
 # クリア区分,リネーム元ディレクトリ,リネーム対象ファイル,リネーム先ディレクトリ
@@ -15,6 +14,7 @@ CLF,D:\logfile\unyo\azbk\,error.log,D:\unyolog\@@SVRNL@@\log\unyo
 #-----------------------------------------------------------------------------------------------------------------------
 # Oracle 開発インスタンス
 #CLF,E:\CLlog\oracle\bankrazb\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,bankrazb.log,D:\unyolog\@@SVRNL@@\audit\listener
-CLF,E:\CLlog\oracle\bankrazb\diag\tnslsnr\fcctbsdbdw01\bankrazb_lsnr\trace,bankrazb_lsnr.log,D:\unyolog\@@SVRNL@@\audit\listener
-#CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
-CLF,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
+CLF,E:\CLlog\oracle\brccazbk\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,brccazbk_lsnr.log,D:\unyolog\@@SVRNL@@\audit\listener
+#CLF,E:\CLlog\oracle\bankrazb\diag\tnslsnr\fcctbsdbdw01\bankrazb_lsnr\trace,bankrazb_lsnr.log,D:\unyolog\@@SVRNL@@\audit\listener
+CLF,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
+#CLF,E:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
