【1.0次】クラスタ対応 定義ファイル修正
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@137 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
@@ -17,12 +17,23 @@ F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 #-----------------------------------------------------------------------------------------------------------------------
 # 監査ログ 1.0次
 #-----------------------------------------------------------------------------------------------------------------------
+#F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.????????,30
+#F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
+#D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
+#F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
+#F,D:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
+#F,D:\DBFiles\bankrazb\adump,bankrazb_*.xml,3
+#F,D:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
+#F,D:\CLlog\azbk\BANKRAZB\error,err.*,30
+#-----------------------------------------------------------------------------------------------------------------------
+# 監査ログ 1.0次 クラスタ対応
+#-----------------------------------------------------------------------------------------------------------------------
 F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
 D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
-F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.????????,10
-F,D:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,bankrazb_arc*.*,30
-F,D:\DBFiles\bankrazb\adump,bankrazb_*.xml,3
+F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
+F,D:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
+F,D:\DBFiles\brccazbk\adump,brccazbk_*.xml,3
 F,D:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
 F,D:\CLlog\azbk\BANKRAZB\error,err.*,30
 #-----------------------------------------------------------------------------------------------------------------------
@@ -39,4 +50,5 @@ F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener,fslfcctbsdbpw01.log.?????
 D,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle,????????,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors,err.*,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog,ope_history.dump.????????,3650
-F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
+#F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
+F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
