--- a/trunk/unyo/shell/def/ForShinaDev/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForShinaDev/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -16,8 +16,10 @@ C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\
 # Oracle 1.0ŽŸ
 C,F,D:\unyolog\@@SVRNL@@\audit\listener,fslfcctbsdbpw01.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\listener
 C,F,D:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog
-C,F,D:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
-C,F,D:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
+#C,F,D:\DBFiles\bankrazb\adump,bankrazb_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
+#C,F,D:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
+C,F,D:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\oracle\@@D0001@@
+C,F,D:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
 C,F,D:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
