--- a/trunk/unyo/shell/def/ForShinaDev/RENAME_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForShinaDev/RENAME_LOG_DEF_DB.cfg
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# ログファイルリネーム定義 ( Version 1.0 : 2015/01/19 : Update ISID R.YAMANO )
+# ログファイルリネーム定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
-# RENAME_LOG_DEF.cfg (社内DBサーバ用)
+# RENAME_LOG_DEF.cfg (社内DBサーバ用) クラスタ対応に伴う定義見直し
 # クリア区分,リネーム元ディレクトリ,リネーム対象ファイル,リネーム先ディレクトリ
 #-----------------------------------------------------------------------------------------------------------------------
 # クリア区分説明 ( CLN：リネーム処理後＆クリア , CLF:リネーム処理＆後強制クリア NON：リネーム処理のみ )
@@ -13,5 +13,6 @@ CLF,D:\logfile\unyo\azbk\,error.log,D:\unyolog\@@SVRNL@@\log\unyo
 # DBサービスノード用定義
 #-----------------------------------------------------------------------------------------------------------------------
 # Oracle 本番インスタンス (社内環境用)
-CLF,D:\CLlog\oracle\Fslfcctbsdbpw01\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,fslfcctbsdbpw01.log,D:\unyolog\@@SVRNL@@\audit\listener
-CLF,D:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
+CLF,D:\CLlog\oracle\Fslfcctbsdbpw01\diag\tnslsnr\@@SVRNL@@\fslfcctbsdbpw01\trace,brccazbk_lsnr.log,D:\unyolog\@@SVRNL@@\audit\listener
+#CLF,D:\CLlog\oracle\bankrazb\diag\rdbms\bankrazb\bankrazb\trace,alert_bankrazb.log,D:\unyolog\@@SVRNL@@\log\oracle
+CLF,D:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,alert_brccazbk.log,D:\unyolog\@@SVRNL@@\log\oracle
