【1.0】Oracleクラスタ対応 開発機特有のリスナー定義を変更
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@140 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
@@ -39,7 +39,7 @@ F,D:\unyolog\@@SVRNL@@\log\event,event_apl.log.????????,30
 #-----------------------------------------------------------------------------------------------------------------------
 # 監査ログ 1.0次 クラスタ対応 開発用
 #-----------------------------------------------------------------------------------------------------------------------
-F,D:\unyolog\@@SVRNL@@\audit\listener,brccazbk_lsnr.log.????????,30
+F,D:\unyolog\@@SVRNL@@\audit\listener,azbk_lsnr.log.????????,30
 F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
 D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
 F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
@@ -57,7 +57,7 @@ F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event,event_apl.log.????????,90
 # 運用ログ
 F,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo,error.log.????????,90
 # サービスノード設定 開発用
-F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,brccazbk_lsnr.log.????????,3650
+F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,azbk_lsnr.log.????????,3650
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener,bankrazb_lsnr.log.????????,3650
 D,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle,????????,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors,err.*,3650
