【1.0】運用バッチ 送受信データバックアップファイル削除の設定を追加(1.0次)
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@144 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
+# 不要ファイル削除定義 ( Version 1.11 : 2016/01/14 : Update ISID-IT K.Doi )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (DBサーバ用)　開発用
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -66,3 +66,14 @@ F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_brccazbk.log.?????
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\hulft,*.log.????????,90
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\BE,*.xml.????????,90
+#-----------------------------------------------------------------------------------------------------------------------
+# 送受信データ バックアップファイル
+#-----------------------------------------------------------------------------------------------------------------------
+# 月次受信ファイル 31日保管(1世代分)
+F,${UNYO_DB_EXTRCV_DIR}\backup,M_*.dat.*,31
+# 週次受信ファイル 10日保管(1世代分)
+F,${UNYO_DB_EXTRCV_DIR}\backup,W_*.dat.*,10
+# 日次受信ファイル 10日保管
+F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,10
+# 日次送信ファイル 10日保管
+F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,10
