--- a/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForShinaDev/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.0 : 2015/01/19 : Update ISID R.YAMANO )
+# 不要ファイル削除定義 ( Version 1.0 : 2016/01/15 : Update ISID-IT K.Doi )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (社内DBサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -52,3 +52,14 @@ F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\errors,err.*,3650
 F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\audit\opelog,ope_history.dump.????????,3650
 #F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_bankrazb.log.????????,90
 F,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle,alert_brccazbk.log.????????,90
+#-----------------------------------------------------------------------------------------------------------------------
+# 送受信データ バックアップファイル
+#-----------------------------------------------------------------------------------------------------------------------
+# 月次受信ファイル 31日保管(1世代分)
+F,${UNYO_DB_EXTRCV_DIR}\backup,M_*.dat.*,31
+# 週次受信ファイル 10日保管(1世代分)
+F,${UNYO_DB_EXTRCV_DIR}\backup,W_*.dat.*,10
+# 日次受信ファイル 10日保管
+F,${UNYO_DB_EXTRCV_DIR}\backup,D_*.dat.*,10
+# 日次送信ファイル 10日保管
+F,${UNYO_DB_EXTSND_DIR}\backup,S_*.dat.*,10
