2017年3月保守リリース対応 ログメンテナンス対応
git-svn-id: http://10.16.14.243:13000/svn/azbBatch@149 2364f4dd-7815-ee4c-b9ea-42ae821c1292

--- a/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_AP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 監査ログバックアップ定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 監査ログバックアップ定義 ( Version 1.0 : 2017/02/01 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_AUDIT_DEF.cfg (監査ログバックアップ) (APサーバ用)
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -9,7 +9,8 @@
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+#C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+C,F,D:\logfile\event,event_sec.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
 # BANKR CC 本番インスタンス 0.5次
 #C,F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBTraceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk
 #C,F,D:\unyolog\@@SVRNL@@\audit\brcc\azbk,eMBPerformanceFile.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\brcc\azbk
@@ -54,7 +55,8 @@ C,F,D:\logfile\WAS\bankrtrn,SystemErr_tr_*.log,${COM_NAS_BASE_DIRS}\@@SVRNL@@\lo
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
+#M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
+M,F,D:\logfile\event,event_sec.log.*,D:\unyolog\@@SVRNL@@\audit\event
 # IHS 本番インスタンス 0.5次
 #M,F,D:\logfile\IHS\brccazbk,access.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\ihs\azbk
 # IHS 本番インスタンス 1.0次
