--- a/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 監査ログバックアップ定義 ( Version 1.11 : 2015/11/11 : Update ISID R.YAMANO )
+# 監査ログバックアップ定義 ( Version 1.11 : 2017/02/01 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_AUDIT_DEF.cfg (監査ログバックアップ) (DBサーバ用)
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -9,7 +9,8 @@
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+#C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+C,F,D:\logfile\event,event_sec.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
@@ -35,4 +36,5 @@ C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
+#M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
+M,F,D:\logfile\event,event_sec.log.*,D:\unyolog\@@SVRNL@@\audit\event
