--- a/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_VR.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_AUDIT_LOG_DEF_VR.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 監査ログバックアップ定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 監査ログバックアップ定義 ( Version 1.0 : 2017/02/01 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_AUDIT_DEF.cfg (監査ログバックアップ) (メディアサーバ用)
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -9,13 +9,15 @@
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+#C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
+C,F,D:\logfile\event,event_sec.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\event
 # CIC
 C,F,D:\logfile\inin_tracing\@@D0003@@,*.ininlog,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\audit\cic\@@D0003@@
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
+#M,F,D:\logfile\event,event_sec.log.@@D0001@@,D:\unyolog\@@SVRNL@@\audit\event
+M,F,D:\logfile\event,event_sec.log.*,D:\unyolog\@@SVRNL@@\audit\event
 # CIC
 #M,F,D:\logfile\inin_tracing\@@D0003@@,*.ininlog,D:\unyolog\@@SVRNL@@\audit\cic\@@D0003@@
