--- a/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_AP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 各種ログバックアップ定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 各種ログバックアップ定義 ( Version 1.0 : 2017/02/01 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_OTHER_LOG_DEF.cfg (監査ログを除く各種ログ) (APサーバ用)
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -9,8 +9,10 @@
 # For NAS Strage
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-C,F,D:\logfile\event\,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
-C,F,D:\logfile\event\,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+#C,F,D:\logfile\event\,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+#C,F,D:\logfile\event\,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+C,F,D:\logfile\event\,event_sys.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+C,F,D:\logfile\event\,event_apl.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
 # UNYO Log
 C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo
 # BANKR CC 本番インスタンス 0.5次
@@ -20,9 +22,12 @@ C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVR
 #C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
 #C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\azbk,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\azbk
 # BANKR CC 本番インスタンス 1.0次
+# ログメンテナンス対応
+C,F,D:\BANKR_CC\logs\ui\bankrazb,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
+C,F,D:\BANKR_CC\logs\ui\bankrazb,heap.log.@@D0003@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
-C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
+#C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrazb
 # BANKR CC 研修インスタンス 0.5次
@@ -32,9 +37,12 @@ C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb,dump.log.@@D0001@@,${COM_NAS_BASE
 #C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
 #C,F,D:\unyolog\@@SVRNL@@\log\brcc\ui\trng,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\brcc\ui\trng
 # BANKR CC 研修インスタンス 1.0次
+# ログメンテナンス対応
+C,F,D:\BANKR_CC\logs\ui\brcctrng,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
+C,F,D:\BANKR_CC\logs\ui\brcctrng,heap.log.@@D0003@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,access.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
-C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
+#C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,heap.log.@@D0003@@.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,debug.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
 C,F,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn,dump.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\bankr\ui\bankrtrn
 # IHS 本番インスタンス 0.5次
@@ -57,8 +65,10 @@ C,F,D:\logfile\IHS\bankrtrn,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\l
 # For Local Backup
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-M,F,D:\logfile\event\,event_sys.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
-M,F,D:\logfile\event\,event_apl.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
+#M,F,D:\logfile\event\,event_sys.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
+#M,F,D:\logfile\event\,event_apl.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
+M,F,D:\logfile\event\,event_sys.log.*,D:\unyolog\@@SVRNL@@\log\event\
+M,F,D:\logfile\event\,event_apl.log.*,D:\unyolog\@@SVRNL@@\log\event\
 # IHS 本番インスタンス 0.5次
 #M,F,D:\logfile\IHS\brccazbk,error.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\ihs\azbk
 # IHS 本番インスタンス 1.0次
