--- a/trunk/unyo/shell/def/ForMaster/RENAME_LOG_DEF_AP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/RENAME_LOG_DEF_AP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# ログファイルリネーム定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# ログファイルリネーム定義 ( Version 1.0 : 2017/02/01 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # RENAME_LOG_DEF.cfg (APサーバ用)
 # クリア区分,リネーム元ディレクトリ,リネーム対象ファイル,リネーム先ディレクトリ
@@ -25,7 +25,7 @@ CLF,D:\BANKR_CC\logs\biz\bankrazb\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\bankr
 CLF,D:\BANKR_CC\logs\biz\bankrazb\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\bankr\bankrazb
 NON,D:\BANKR_CC\logs\ui\bankrazb,access.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
 NON,D:\BANKR_CC\logs\ui\bankrazb,error.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
-NON,D:\BANKR_CC\logs\ui\bankrazb,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
+#NON,D:\BANKR_CC\logs\ui\bankrazb,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
 NON,D:\BANKR_CC\logs\ui\bankrazb,debug.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
 NON,D:\BANKR_CC\logs\ui\bankrazb,dump.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrazb
 # 研修インスタンス 0.5次
@@ -41,7 +41,7 @@ CLF,D:\BANKR_CC\logs\biz\bankrtrn\,eMBTraceFile,D:\unyolog\@@SVRNL@@\audit\bankr
 CLF,D:\BANKR_CC\logs\biz\bankrtrn\,eMBPerformanceFile,D:\unyolog\@@SVRNL@@\audit\bankr\bankrtrn
 NON,D:\BANKR_CC\logs\ui\brcctrng,access.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
 NON,D:\BANKR_CC\logs\ui\brcctrng,error.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
-NON,D:\BANKR_CC\logs\ui\brcctrng,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
+#NON,D:\BANKR_CC\logs\ui\brcctrng,heap.log.@@D0003@@,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
 NON,D:\BANKR_CC\logs\ui\brcctrng,debug.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
 NON,D:\BANKR_CC\logs\ui\brcctrng,dump.log,D:\unyolog\@@SVRNL@@\log\bankr\ui\bankrtrn
 #-----------------------------------------------------------------------------------------------------------------------
