--- a/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_RP.cfg
+++ b/trunk/unyo/shell/def/ForMaster/BACKUP_OTHER_LOG_DEF_RP.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 各種ログバックアップ定義 ( Version 1.0 : 2014/03/14 : Update ISID R.YAMANO )
+# 各種ログバックアップ定義 ( Version 1.0 : 2017/02/01 : Update ISID R.YAMANO )
 #-----------------------------------------------------------------------------------------------------------------------
 # BACKUP_OTHER_LOG_DEF.cfg (監査ログを除く各種ログ) (統計サーバ用)
 # バックアップ種別,対象区分,対象上位ディレクトリ,対象ディレクトリ/ファイル,保管先ディレクトリ
@@ -12,8 +12,10 @@ C,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\ot
 C,F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,ERRORLOG.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
 C,F,D:\Product\MICROS~1\PROGRA~1\MICROS~1\MSSQL11.MSSQLSERVER\MSSQL\Log,*.trc,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\MSSQL\@@D0001@@
 # Event Log
-C,F,D:\logfile\event,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
-C,F,D:\logfile\event,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+#C,F,D:\logfile\event,event_sys.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+#C,F,D:\logfile\event,event_apl.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+C,F,D:\logfile\event,event_sys.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
+C,F,D:\logfile\event,event_apl.log.*,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\event
 # UNYO Log
 C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\otherlog\unyo
 #-----------------------------------------------------------------------------------------------------------------------
@@ -22,6 +24,8 @@ C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVR
 # For Local Backup
 #-----------------------------------------------------------------------------------------------------------------------
 # Event Log
-M,F,D:\logfile\event,event_sys.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
-M,F,D:\logfile\event,event_apl.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
+#M,F,D:\logfile\event,event_sys.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
+#M,F,D:\logfile\event,event_apl.log.@@D0001@@,D:\unyolog\@@SVRNL@@\log\event\
+M,F,D:\logfile\event,event_sys.log.*,D:\unyolog\@@SVRNL@@\log\event\
+M,F,D:\logfile\event,event_apl.log.*,D:\unyolog\@@SVRNL@@\log\event\
 M,F,D:\IW_CIC\log,IW_SVC_log_@@D0001@@.txt,D:\unyolog\@@SVRNL@@\log\cic
