--- a/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForMaster/DELETE_LOG_DEF_DB.cfg
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------------------------------------------------
-# 不要ファイル削除定義 ( Version 1.11 : 2016/01/15 : Update ISID-IT K.Doi )
+# 不要ファイル削除定義 ( Version 1.11 : 2017/02/01 : Update ISID-IT K.Doi )
 #-----------------------------------------------------------------------------------------------------------------------
 # DELETE_LOG_DEF.cfg  (DBサーバ用)
 # 削除区分,削除対象上位ディレクトリ,削除対象対象ディレクトリ/ファイル,保管日数
@@ -44,7 +44,8 @@ F,D:\unyolog\@@SVRNL@@\audit\errors,err.*,30
 D,D:\unyolog\@@SVRNL@@\audit\oracle,????????,30
 F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.????????,10
 F,E:\CLlog\oracle\brccazbk\diag\rdbms\brccazbk\brccazbk\trace,brccazbk_arc*.*,30
-F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,7
+#F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,7
+F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,1
 F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,30
 F,E:\CLlog\azbk\BANKRAZB\error,err.*,30
 #-----------------------------------------------------------------------------------------------------------------------
